# dj-proto

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: linux-tests.yml  windows-build.yml
app/: CMakeLists.txt
app/Source/: AudioEngine.cpp  AudioEngine.h  DeckComponent.cpp  DeckComponent.h  Main.cpp  MainComponent.cpp  MainComponent.h  WaveformDisplay.cpp  WaveformDisplay.h
core/: CMakeLists.txt
core/include/djcore/: BPMAnalyzer.h  BeatGrid.h  LoopEngine.h  TimeSignature.h  TrackData.h  WaveformAnalyzer.h
core/src/: BPMAnalyzer.cpp  BeatGrid.cpp  LoopEngine.cpp  TimeSignature.cpp  TrackData.cpp  WaveformAnalyzer.cpp
core/tests/: CMakeLists.txt  test_beatgrid.cpp  test_data.cpp  test_loop.cpp  test_waveform.cpp
scripts/: generate_test_clicks.py
